Separate email rendering from delivery
Split email content generation out of the delivery path and make subject
handling explicit and injectable:

- EmailContentGenerator renders the HTML body and derives its plain-text
  alternative; CommunicationEmailContentGenerator selects the template and
  builds the velocity model for a Communication.
- htmlDomainPrefix is injected through the EmailBroadcastImpl and
  CommunicationEmailContentGenerator constructors (final field) instead of a
  two-hop @Value setter; BaseConfig supplies ${server.urls.prefix}.
- Email subjects are resolved from i18n keys inside EmailContentGenerator
  (via MessageSourceUtils) and carried on EmailContent#subject(); ~15 callers
  pass a key and read content.subject(). Hard-coded English subjects are
  externalized into new email.*.subject keys in ApplicationResources.
  The body-only overload is package-private, reserved for the broadcast path
  whose subject is the runtime Communication#getSubject().

Test fixes: give EmailBroadcasterConfigTest's minimal context a
MessageSourceUtils bean, and drop the stale anyBoolean() matcher in
SysAdminControllerMVCIT after DevEmailSenderImpl's log format changed.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>